# VoiceMeeting

./: .gitignore  README.md  package.json  requirements-diarization.txt  requirements.txt
backend/: __init__.py  asr.py  build_binary.py  config.py  diarization.py  llm.py  main.py  media_tools.py  prompt_settings.py  server.py  speaker_tracker.py  storage.py  summarizer.py  transcript.py  vibearound.py
frontend/: components.json  index.html  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/meeting/: DeleteMeetingDialog.jsx  MarkdownPreview.jsx  MeetingPropertiesDialog.jsx  MeetingTimeline.jsx  ModelLoadDialog.jsx  NotesPane.jsx  SettingsDialog.jsx  Sidebar.jsx  StartupBanner.jsx  TimelineThreeCanvas.jsx  TopBar.jsx  TranscriptPane.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  progress.jsx
frontend/src/lib/: appearance.js  i18n.jsx  meeting-display.js
scripts/: build-server.sh  dev-desktop.sh  dev.sh  predownload_asr.py  setup-dev-sidecar.js  setup.sh  sign-and-notarize-macos.sh
tauri/: package.json
tauri/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
