[package]
name = "voice-meeting"
version = "0.0.1"
description = "Local meeting recorder and transcript app"
authors = ["VoiceMeeting"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-av-foundation = { version = "0.3.2", default-features = false, features = ["std", "AVCaptureDevice", "AVMediaFormat", "block2"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
